Finalized study of London Housing Prices

--- a/London_Housing_Case_Study_Tier3.ipynb
+++ b/London_Housing_Case_Study_Tier3.ipynb
@@ -2574,7 +2574,7 @@
    "metadata": {},
    "source": [
     "Which boroughs of London have seen the greatest increase in housing prices, on average, over the last two decades?\n",
-    "Based on the cleaned data, both the sorted bar plots of price ratio and percentage change in average home price, show that Hackney is the borough with the greatest increase in home prices. Hackney is followed by Waltham Forest, and Southwark as the boroughs with the most . "
+    "Based on the cleaned data, both the sorted bar plots of price ratio and percentage change in average home price, show that Hackney is the borough with the greatest increase in home prices. Hackney is followed by Waltham Forest, and Southwark as the boroughs with the highest increase in home prices from 1998 to 2018. "
    ]
   }
  ],
