Updated Cowboy Cigarettes Case Study

--- a/Cowboy Cigarettes Case Study - Tier 3.ipynb
+++ b/Cowboy Cigarettes Case Study - Tier 3.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "4  1949-05    1000121"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -484,7 +484,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -528,7 +528,7 @@
        "Name: #CigSales, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
        "<Figure size 640x480 with 4 Axes>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -672,11 +672,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2018: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is smaller than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -686,7 +696,7 @@
        " {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%': 0.739})"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +746,7 @@
        "Name: #CigSales, Length: 144, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +808,7 @@
        "Name: #CigSales, Length: 144, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -852,11 +862,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:2022: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is greater than the p-value returned.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -866,7 +886,7 @@
        " {'10%': 0.347, '5%': 0.463, '2.5%': 0.574, '1%': 0.739})"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +953,8 @@
     "    predictions = list()\n",
     "    for i in range(len(test)):#timestep-wise comparison between test data and one-step prediction ARIMA model. \n",
     "        model = ARIMA(past, order=arima_order)\n",
-    "        model_fit = model.fit(disp=0)\n",
+    "        #model_fit = model.fit(disp=0)\n",
+    "        model_fit = model.fit()\n",
     "        future = model_fit.forecast()[0]\n",
     "        # Append() here\n",
     "        predictions.append(future)\n",
@@ -953,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,32 +989,35 @@
     "            for q in q_values:\n",
     "                # p, d, q iterator variables in that order\n",
     "                order = (p,d,q)\n",
+    "                print(order)\n",
     "                try:\n",
     "                    # Make a variable called mse for the Mean squared error\n",
     "                    mse = evaluate_arima_model(dataset, order)\n",
+    "                    print(f\"MSE: {mse}\")\n",
     "                    if mse < best_score:\n",
     "                        best_score, best_cfg = mse, order\n",
     "                    print('ARIMA%s MSE=%.3f' % (order,mse))\n",
-    "                except:\n",
-    "                    continue\n",
+    "                except Exception as E:\n",
+    "                    print(f\"exception error:{E}\")\n",
+    "                    #continue\n",
     "    return print('Best ARIMA%s MSE=%.3f' % (best_cfg, best_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now, we choose a couple of values to try for each parameter.\n",
     "p_values = [x for x in range(0, 3)]\n",
-    "d_values = [y for y in range(0, 3)]\n",
-    "q_values = [z for z in range(0, 3)]"
+    "d_values = [y for y in range(0, 2)]\n",
+    "q_values = [z for z in range(0, 2)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -1002,7 +1026,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best ARIMANone MSE=inf\n"
+      "(0, 0, 0)\n",
+      "MSE: 4.026637221979929e-08\n",
+      "ARIMA(0, 0, 0) MSE=0.000\n",
+      "(0, 0, 1)\n",
+      "MSE: 4.024729608909581e-08\n",
+      "ARIMA(0, 0, 1) MSE=0.000\n",
+      "(0, 1, 0)\n",
+      "MSE: 2.7527441740919433e-09\n",
+      "ARIMA(0, 1, 0) MSE=0.000\n",
+      "(0, 1, 1)\n",
+      "MSE: 2.450173661263074e-09\n",
+      "ARIMA(0, 1, 1) MSE=0.000\n",
+      "(1, 0, 0)\n",
+      "MSE: 2.7788117126017206e-09\n",
+      "ARIMA(1, 0, 0) MSE=0.000\n",
+      "(1, 0, 1)\n",
+      "MSE: 2.4269035232703445e-09\n",
+      "ARIMA(1, 0, 1) MSE=0.000\n",
+      "(1, 1, 0)\n",
+      "MSE: 2.4936448923234293e-09\n",
+      "ARIMA(1, 1, 0) MSE=0.000\n",
+      "(1, 1, 1)\n",
+      "MSE: 2.452412341883781e-09\n",
+      "ARIMA(1, 1, 1) MSE=0.000\n",
+      "(2, 0, 0)\n",
+      "MSE: 2.454990654676207e-09\n",
+      "ARIMA(2, 0, 0) MSE=0.000\n",
+      "(2, 0, 1)\n",
+      "MSE: 2.4543632219588047e-09\n",
+      "ARIMA(2, 0, 1) MSE=0.000\n",
+      "(2, 1, 0)\n",
+      "MSE: 2.4363574069068457e-09\n",
+      "ARIMA(2, 1, 0) MSE=0.000\n",
+      "(2, 1, 1)\n",
+      "MSE: 2.2522549152540996e-09\n",
+      "ARIMA(2, 1, 1) MSE=0.000\n",
+      "Best ARIMA(2, 1, 1) MSE=0.000\n"
      ]
     }
    ],
@@ -1023,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -1061,10 +1121,10 @@
        "  <th>Model:</th>            <td>ARIMA(2, 1, 1)</td>  <th>  Log Likelihood     </th> <td>1287.245</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Thu, 12 Jun 2025</td> <th>  AIC                </th> <td>-2566.490</td>\n",
+       "  <th>Date:</th>            <td>Mon, 16 Jun 2025</td> <th>  AIC                </th> <td>-2566.490</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>09:57:03</td>     <th>  BIC                </th> <td>-2554.639</td>\n",
+       "  <th>Time:</th>                <td>10:57:12</td>     <th>  BIC                </th> <td>-2554.639</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>             <td>01-01-1949</td>    <th>  HQIC               </th> <td>-2561.674</td>\n",
@@ -1115,8 +1175,8 @@
        "==============================================================================\n",
        "Dep. Variable:              #CigSales   No. Observations:                  144\n",
        "Model:                 ARIMA(2, 1, 1)   Log Likelihood                1287.245\n",
-       "Date:                Thu, 12 Jun 2025   AIC                          -2566.490\n",
-       "Time:                        09:57:03   BIC                          -2554.639\n",
+       "Date:                Mon, 16 Jun 2025   AIC                          -2566.490\n",
+       "Time:                        10:57:12   BIC                          -2554.639\n",
        "Sample:                    01-01-1949   HQIC                         -2561.674\n",
        "                         - 12-01-1960                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -1140,7 +1200,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
